[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brightway25"
authors = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
maintainers = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
description = "A wrapper library for documentation and easy installation of Brightway 2.5"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "bw2analyzer>=0.11.1",
    "bw2calc>=2.0.1",
    "bw2data>=4.4.2",
    "bw2io>=0.9.6",
    "bw2parameters>=1.1.0",
    "bw_migrations>=0.2",
    "bw_processing>=1.0",
    "bw_simapro_csv>=0.4",
    "ecoinvent_interface>=3.1",
    "matrix_utils>=0.6",
    "mrio_common_metadata>=0.2.1",
    "multifunctional>=1.0",
    "numpy<2",
    "randonneur>=0.6.1",
    "randonneur_data>=0.5.5",
    "scipy",
    "stats_arrays>=0.7",
]

[project.urls]
source = "https://github.com/brightway-lca/brightway25"
homepage = "https://github.com/brightway-lca/brightway25"
tracker = "https://github.com/brightway-lca/brightway25/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "brightway25",
    "pytest",
    "pytest-cov",
    "python-coveralls"
]
dev = [
    "build",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true
packages = ["brightway25"]

[tool.setuptools.dynamic]
version = {attr = "brightway25.__version__"}

[tool.pytest.ini_options]
addopts = "--cov brightway25 --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
